@@ -719,65 +719,3 @@ sub xst_parse_interfaces_option_str
 
   return undef;
 }
-
-# Get all instances from fstab-style file. Return array of hashes.
-#
-# This is not done in smaller, atomic funcs that get single options
-# per disk device, due to the fact that a device is identified either
-# by its label, uuid or device node, and a label can be made to look
-# like a device node. For each device, we need to specify the kind of
-# key(s) used, and making a special-format string for that (which could
-# be passed to option readers) would be a bad hack.
-
-sub xst_parse_fstab  # filename
-{
-  my ($file) = @_;
-  my ($fd, @res);
-
-  $fd = &xst_file_open_read_from_names ($file);
-  $res = undef;
-
-  while (($_ = &xst_parse_chomp_line_hash_comment ($fd)) != -1)
-  {
-    my $l = $$_;
-    my @line = split /[ \t]+/, $l;
-
-    # Each line is in the following format:
-    # <device> <mount point> <filesystem> <options> <dump flag> <fsck priority>
-    next if (@line < 6);
-    my ($device, $point, $fs, $options, $dump, $fsck) = @line;
-
-    my $hash = {};
-
-    # <device> expands to "LABEL=<label>", "UUID=<uuid>" or "<device node>".
-    if    ($device =~ /^LABEL=(.*)/i) { $$hash{'label'}  = $1; }
-    elsif ($device =~ /^UUID=(.*)/i)  { $$hash{'uuid'}   = $1; }
-    else                              { $$hash{'device'} = $device; }
-
-    # <mount point> and <fs> are verbatim.
-    $$hash{'point'} = $point;
-    $$hash{'fs'}    = $fs;
-
-    # <options> expands to "<option>[,<option>[,...]]".
-    my @optlist = split /[,]/, $options;
-    my $opthash = {};
-
-    foreach $option (@optlist)
-    {
-      # <option> expands to "<key>[=<value>]". <key> == "defaults" is ignored.
-      my ($key, $value) = split /[=]/, $option;
-      next if ($option eq "" || $option eq "defaults");
-
-      $$opthash{$key} = $value;
-    }
-
-    $$hash{'options'} = $opthash;
-    $$hash{'dump'}    = $dump;
-    $$hash{'fsck'}    = $fsck;
-
-    push @res, $hash;
-  }
-
-  close $fd;
-  return @res;
-}
